error fixing + interface improvements